<resources>
    <string name="app_name">CHATTY</string>

    <string name="need_a_new_account">Sign Up</string>
    <string name="already_have_account">Sign In</string>
    <string name="welcome_to_chatapp">Welcome</string>
    <string name="create_account">Create Account</string>
    <string name="registering_user">Registering User</string>
    <string name="registering_user_message">Loading…</string>
    <string name="default_image">default</string>
    <string name="default_thumb_image">default</string>
    <string name="registration_error_toast">Cannot Sign in. Please check the form and try again.</string>
    <string name="create_a_new_account">Sign Up</string>
    <string name="login">Login</string>
    <string name="logging_in">Logging In</string>
    <string name="logging_in_message">Loading…</string>
    <string name="change_image_btn">Change Image</string>
    <string name="change_status_btn">Change Status</string>
    <string name="settings_display_name_txt">Display Name</string>
    <string name="default_status">Hi, I\'m using ChatApp.</string>
    <string name="settings_select_image">Select Image</string>
    <string name="status">Status</string>
    <string name="status_value">status_value</string>
    <string name="saving_changes">Saving Changes</string>
    <string name="saving_changes_message">Please wait while we save the changes</string>
    <string name="Saving_changes_error_toast">There was some error in saving Changes.</string>
    <string name="your_status_text">Your Status</string>
    <string name="save_changes_btn">Save Changes</string>
    <string name="activity_users_app_title">All Users</string>
    <string name="enter_message">Enter Message…</string>
    <string name="user_online_status">User online Status</string>
    <string name="message_time">message time</string>
    <string name="search_appBar_title">Search…</string>
    <string name="user_single_chat_item_online_status">Online status</string>
    <string name="search_user">Search User</string>
    <string name="hint_search_here">Search here</string>
    <string name="total_friends">Total Friends</string>
    <string name="send_friend_request">Add frind</string>
    <string name="decline_friend_request">Decline</string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="chck_internet_connection">Please check your internet connection</string>
    <string name="snackbar_ok">OK</string>
    <string name="Toast_register_form_fields_empty">Please fill all the form fields to register your account</string>
    <string name="user_id">user_id</string>
    <string name="chatUserName">chatUserName</string>
    <string name="account_status">Account Status</string>
    <string name="not_match">Password not match</string>


    <!--Firebase Tables Fields-->
    <!--Users-->
    <string name="FB_Users_field">Users</string>
    <string name="FB_name_field">name</string>
    <string name="FB_status_field">status</string>
    <string name="FB_image_field">image</string>
    <string name="FB_thumb_image_field">thumb_image</string>
    <string name="FB_users_online_field">online</string>
    <string name="FB_device_token_field">device_token</string>
    <!--Messages-->
    <string name="FB_Messages_field">messages</string>
    <string name="FB_message_field">message</string>
    <string name="FB_message_seen_field">seen</string>
    <string name="FB_message_type_field">type</string>
    <string name="FB_message_time_field">time</string>
    <string name="FB_message_from_field">from</string>
    <string name="FB_message_type_text_field">text</string>
    <string name="FB_message_type_image_field">image</string>
    <!--Friends-->
    <string name="FB_Friends_date_field">date</string>
    <string name="FB_Friends_field">Friends</string>
    <!--LastMessages-->
    <string name="FB_lastMessage_field">lastMessage</string>
    <string name="FB_lastMessageKey_field">lastMessageKey</string>
    <!--Notifications-->
    <string name="FB_notifications_field">Notifications</string>
    <string name="Notifications">Notifications/</string>
    <string name="FB_notifications_from_field">from</string>
    <string name="FB_notifications_type_field">type</string>
    <string name="FB_notifications_type_request_value">request</string>
    <string name="FB_notifications_type_sent_value">sent</string>
    <string name="FB_notifications_type_received_value">received</string>
    <!--Friend Request-->
    <string name="FB_Friend_req_field">Friend_req</string>
    <string name="Friendship_status_notFriends">not_friends</string>
    <string name="Friendship_status_friends">friends</string>
    <string name="Friendship_request_status_req_received">req_received</string>
    <string name="Friendship_request_status_req_sent">req_sent</string>
    <string name="FB_friendship_request_type_field">request_type</string>
    <!--Firebase Storage Fields-->
    <string name="FB_storage_profile_images_field">profile_images</string>
    <string name="FB_storage_thumbs_field">thumbs</string>
    <string name="FB_storage_message_images_field">message_images</string>
    <!--Notification Channel-->
    <string name="channel_name">ChatApp_channel</string>
    <string name="channel_description">ChatApp_channel_description</string>

    <!--Intent/Extras-->
    <string name="intent_stringExtra_user_id">user_id</string>
    <string name="intent_stringExtra_chatUserName">chatUserName</string>
    <string name="gallery_intent_title">Select Image</string>
    <string name="gallery_intent_setType">image/*</string>

    <!--Media Type-->
    <string name="jpg_extension">.jpg</string>

    <!--Toast Messages-->
    <string name="Toast_thumbnail_success_upload">Thumbnail successfully uploaded.</string>
    <string name="Toast_error_thumbnail_upload">Error in uploading thumbnail .</string>
    <string name="Toast_error">Error :</string>
    <string name="Toast_error_request_sending">There was some error in sending request</string>
    <string name="Toast_search">Started Search</string>
    <string name="Toast_profile_image_update_success">Profile Image successfully uploaded.</string>
    <string name="Toast_profile_image_update_error">Error in uploading Profile Image.</string>
    <string name="Toast_started_search">Started Search</string>

    <!--Boolean Strings-->
    <string name="boolean_true_string">true</string>

    <!--Profile Buttons Strings-->
    <string name="accept_friend_request_text">Accept</string>
    <string name="send_friend_request_text">Send Friend Request</string>
    <string name="Unfriend_this_person_text">Unfriend </string>
    <string name="cancel_friend_request_text">Cancel Friend Request</string>

    <!--Status Strings-->
    <string name="status_online_text">Online</string>
    <string name="request_sent">sent</string>
    <string name="request_received">received</string>

    <!--Other Strings-->
    <string name="open_profile_option">Open Profile</string>
    <string name="send_message_option">Send Message</string>
    <string name="select_option_title">Select an Option</string>
    <string name="progress_dialog_user_data_title">Loading User Data</string>
    <string name="progress_dialog_user_data_message">Please wait while we load the user data.</string>
    <string name="progress_uploading_image">Uploading Image…</string>
    <string name="progress_uploading_image_message">Please wait while we upload and process the image.</string>
    <string name="ellipsis">…</string>
    <string name="imageTransition">imageTransition</string>
    <string name="nameTransition">nameTransition</string>
    <string name="last_seen">Last Seen</string>
    <string name="enter_message_here">Enter message here</string>
    <string name="unable_send_message_txt">You may not be able to send messages to this user because you are not friends with him/her.</string>

    <!--Widget-->
    <string name="appwidget_text">EX.</string>
    <string name="appwidget_name_text">DisplayName</string>
    <string name="appwidget_userId_text">UserId</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="AppWidgetConfig_choose_chat">Choose a Chat</string>
    <string name="widget_default_image_check">default</string>

    <!--Firebase Messaging Service-->
    <string name="fromUserId">from_user_id</string>
    <string name="userId">user_id</string>

    <!--Time Labels-->
    <string name="time_just_now">JUST NOW</string>
    <string name="time_yesterday">YESTERDAY</string>
    <string name="time_just_now_2">just now</string>
    <string name="time_a_minute_ago">a minute ago</string>
    <string name="time_minutes_ago">minutes ago</string>
    <string name="time_an_hour_ago">an hour ago</string>
    <string name="time_hours_ago">hours ago</string>
    <string name="time_yesterday_2">yesterday</string>
    <string name="time_days_ago">days ago</string>

    <!--onSavedInstance / onRestoreInstance-->
    <string name="LoginEmailSavedKey">LoginEmailSavedKey</string>
    <string name="LoginPasswordSavedKey">LoginPasswordSavedKey</string>
    <string name="RegisterNameSaved">RegisterNameSaved</string>
    <string name="RegisterEmailSaved">RegisterEmailSaved</string>
    <string name="RegisterPasswordSaved">RegisterPasswordSaved</string>

    <!--SectionsPagerAdapter Tabs-->
    <string name="requests_tab_title">REQUESTS</string>
    <string name="chats_tab_title">CHATS</string>
    <string name="friends_tab_title">FRIENDS</string>




</resources>
